--- a/index.html
+++ b/index.html
@@ -1096,9 +1096,9 @@
     <h1>Firebase Authentication</h1>
     <input type="email" id="email" placeholder="Email" required>
     <input type="password" id="password" placeholder="Password" required>
-    <button onclick="createAccount()">Create Account</button>
-    <button onclick="login()">Log In</button>
-    <button onclick="logout()">Log Out</button>
+    <button id="createAccountBtn">Create Account</button>
+    <button id="loginBtn">Log In</button>
+    <button id="logoutBtn">Log Out</button>
 
     <!-- Optional: Add an area to show logged-in status -->
     <div id="status"></div>
@@ -1120,7 +1120,7 @@
         const auth = firebase.auth();
 
         // Create account function
-        function createAccount() {
+        document.getElementById('createAccountBtn').onclick = function() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             auth.createUserWithEmailAndPassword(email, password)
@@ -1133,10 +1133,10 @@
                     console.error('Error creating account:', error);
                     alert(error.message);
                 });
-        }
+        };
 
         // Login function
-        function login() {
+        document.getElementById('loginBtn').onclick = function() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             auth.signInWithEmailAndPassword(email, password)
@@ -1149,17 +1149,17 @@
                     console.error('Error logging in:', error);
                     alert(error.message);
                 });
-        }
+        };
 
         // Logout function
-        function logout() {
+        document.getElementById('logoutBtn').onclick = function() {
             auth.signOut().then(() => {
                 console.log('User logged out');
                 alert('Logged out successfully!');
             }).catch((error) => {
                 console.error('Error logging out:', error);
             });
-        }
+        };
 
         // Monitor authentication state
         auth.onAuthStateChanged((user) => {
@@ -1175,6 +1175,7 @@
 
 </body>
 </html>
+i
 
 
 
